Added Montserrat font and some global styles

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -2,7 +2,7 @@
     height: 250px;
     border-top: 1px solid #1d1d1d2d;
     color: #5c5c5c;
-    background-color: #f1f1f1;
+    background-color: #dfdfdf;
     display: flex;
     flex-direction: column;
     justify-content: center;
