--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,29 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: #e6e6e6;
+  font-family: 'Montserrat', sans-serif;
+}
+
+input::placeholder, textarea::placeholder {
+  font-family: 'Montserrat', sans-serif;
+}
+
+input:focus, textarea:focus {
+  outline: none;
+}
+
+a, nav button {
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  color: #1f1f1f;
+  transition: .4s;
+  font-size: 1em;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+}
+
+a:hover, nav button:hover {
+  color: #bbb;
 }
