--- a/src/pages/Post/Post.module.css
+++ b/src/pages/Post/Post.module.css
@@ -11,6 +11,11 @@
     justify-content: center;
 }
 
+.postContainer img {
+    max-width: 600px;
+    margin-bottom: 1em;
+}
+
 .tags p {
     margin-right: 1em;
 }
